--- a/学徒流程.md
+++ b/学徒流程.md
@@ -13,7 +13,8 @@
 - 知道如何添加水、切削液以及润滑油
 - 常见的机床报警
 
-#### 学徒进阶 初步调机
+#### 学徒进阶
 
 - 了解常见的G代码、M代码
-- 了解部分简单的手编 eg：打点钻孔攻牙、以及看懂简单的宏程序
+- 了解部分简单的手编
+  > eg：打点钻孔攻牙、以及看懂简单的宏程序
